--- a/itunes1/Base.lproj/Main.storyboard
+++ b/itunes1/Base.lproj/Main.storyboard
@@ -140,46 +140,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QrT-N4-lE0">
-                                <rect key="frame" x="0.0" y="244" width="414" height="598"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QrT-N4-lE0">
+                                <rect key="frame" x="0.0" y="206.5" width="414" height="635.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5gB-FT-ryv">
-                                <rect key="frame" x="0.0" y="66" width="414" height="127"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5gB-FT-ryv">
+                                <rect key="frame" x="0.0" y="28.5" width="414" height="127"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="127" id="2NA-hN-ukl"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwZ-wV-2Oc">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="58"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rwZ-wV-2Oc">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EL1-vm-fnY">
-                                <rect key="frame" x="307" y="201" width="87" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="THl-NN-SFt">
+                                <rect key="frame" x="20" y="173.5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="THl-NN-SFt">
-                                <rect key="frame" x="20" y="211" width="96" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pjs-il-1MO">
-                                <rect key="frame" x="124" y="206" width="166" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Visitar página del artista"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pjs-il-1MO">
+                                <rect key="frame" x="124" y="168.5" width="166" height="30"/>
+                                <state key="normal" title="Página del artista"/>
                                 <connections>
                                     <action selector="visitarPagina:" destination="fIh-7Q-f9d" eventType="touchUpInside" id="mL2-ky-RBh"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EL1-vm-fnY">
+                                <rect key="frame" x="352" y="163.5" width="42" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="QrT-N4-lE0" firstAttribute="leading" secondItem="BrI-a5-H8Q" secondAttribute="leading" id="1So-jQ-3uK"/>
+                            <constraint firstItem="5gB-FT-ryv" firstAttribute="trailing" secondItem="BrI-a5-H8Q" secondAttribute="trailing" id="9sN-am-WsE"/>
+                            <constraint firstItem="5gB-FT-ryv" firstAttribute="leading" secondItem="BrI-a5-H8Q" secondAttribute="leading" id="ExW-Ug-0Ke"/>
+                            <constraint firstItem="EL1-vm-fnY" firstAttribute="leading" secondItem="pjs-il-1MO" secondAttribute="trailing" priority="999" constant="62" id="FyE-Sg-iQN"/>
+                            <constraint firstItem="QrT-N4-lE0" firstAttribute="trailing" secondItem="BrI-a5-H8Q" secondAttribute="trailing" id="PhN-Hi-0I8"/>
+                            <constraint firstItem="BrI-a5-H8Q" firstAttribute="trailing" secondItem="EL1-vm-fnY" secondAttribute="trailing" constant="20" id="SZS-Yj-VAX"/>
+                            <constraint firstItem="pjs-il-1MO" firstAttribute="leading" secondItem="THl-NN-SFt" secondAttribute="trailing" priority="999" constant="62" id="Sne-jS-7vS"/>
+                            <constraint firstItem="THl-NN-SFt" firstAttribute="leading" secondItem="BrI-a5-H8Q" secondAttribute="leading" constant="20" id="WwS-Ni-h0b"/>
+                            <constraint firstAttribute="bottom" secondItem="QrT-N4-lE0" secondAttribute="bottom" id="XRl-e6-o5d"/>
+                            <constraint firstItem="rwZ-wV-2Oc" firstAttribute="leading" secondItem="BrI-a5-H8Q" secondAttribute="leading" id="cJ3-3V-8eH"/>
+                            <constraint firstItem="pjs-il-1MO" firstAttribute="top" secondItem="5gB-FT-ryv" secondAttribute="bottom" constant="13" id="cjq-ie-9Kv"/>
+                            <constraint firstItem="QrT-N4-lE0" firstAttribute="top" secondItem="THl-NN-SFt" secondAttribute="bottom" constant="12" id="iuK-fn-ujF"/>
+                            <constraint firstItem="EL1-vm-fnY" firstAttribute="top" secondItem="5gB-FT-ryv" secondAttribute="bottom" constant="8" id="jPr-Ot-Xuf"/>
+                            <constraint firstItem="THl-NN-SFt" firstAttribute="top" secondItem="5gB-FT-ryv" secondAttribute="bottom" constant="18" id="oWp-r0-N3x"/>
+                            <constraint firstItem="5gB-FT-ryv" firstAttribute="top" secondItem="rwZ-wV-2Oc" secondAttribute="bottom" constant="8" id="trt-4B-g4K"/>
+                            <constraint firstItem="QrT-N4-lE0" firstAttribute="top" secondItem="EL1-vm-fnY" secondAttribute="bottom" constant="3" id="uXv-27-txV"/>
+                            <constraint firstItem="rwZ-wV-2Oc" firstAttribute="top" secondItem="BrI-a5-H8Q" secondAttribute="top" id="x7Y-yN-G97"/>
+                            <constraint firstItem="rwZ-wV-2Oc" firstAttribute="trailing" secondItem="BrI-a5-H8Q" secondAttribute="trailing" id="xo0-bV-O3g"/>
+                            <constraint firstItem="QrT-N4-lE0" firstAttribute="top" secondItem="pjs-il-1MO" secondAttribute="bottom" constant="8" id="yuU-eF-Jaa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="BrI-a5-H8Q"/>
                     </view>
                     <connections>
