--- a/itunes1/Base.lproj/Main.storyboard
+++ b/itunes1/Base.lproj/Main.storyboard
@@ -17,18 +17,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BVe-L6-B9k">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="132" width="414" height="764"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="bhJ-EL-PtU"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="5VN-uU-pVk"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" id="pqr-6F-j9U">
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="BVe-L6-B9k" firstAttribute="top" secondItem="pqr-6F-j9U" secondAttribute="bottom" id="583-Dx-wLm"/>
                             <constraint firstItem="BVe-L6-B9k" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QyG-n8-Nbz"/>
-                            <constraint firstItem="BVe-L6-B9k" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="WPa-Fr-Rgj"/>
                             <constraint firstAttribute="bottom" secondItem="BVe-L6-B9k" secondAttribute="bottom" id="hFu-pB-3bh"/>
                             <constraint firstItem="BVe-L6-B9k" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="oAG-9v-kTn"/>
                         </constraints>
@@ -36,6 +41,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="DkO-kZ-gsh"/>
                     <connections>
+                        <outlet property="searchBar" destination="pqr-6F-j9U" id="FVr-es-fXy"/>
                         <outlet property="tabla" destination="BVe-L6-B9k" id="4Fg-BI-1tV"/>
                         <segue destination="mla-zw-DqK" kind="showDetail" identifier="DiscografiaViewController" id="xZk-ME-2EB"/>
                     </connections>
@@ -117,6 +123,13 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbE-cI-JYo">
+                                <rect key="frame" x="108" y="20" width="198" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <accessibility key="accessibilityConfiguration" identifier="DiscografiaController"/>
@@ -124,6 +137,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="FkI-ex-T3Y"/>
                     <connections>
+                        <outlet property="artistName" destination="sbE-cI-JYo" id="6RN-v0-tb3"/>
                         <outlet property="collection" destination="TJC-wQ-3pg" id="ZON-4d-acc"/>
                         <segue destination="fIh-7Q-f9d" kind="showDetail" identifier="ArtistViewController" id="bQ8-c9-mfV"/>
                     </connections>
