--- a/itunes1/Base.lproj/Main.storyboard
+++ b/itunes1/Base.lproj/Main.storyboard
@@ -116,9 +116,9 @@
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="173" height="251"/>
                                         <connections>
-                                            <outlet property="albumImage" destination="X42-3k-eIt" id="ScG-VQ-Ji0"/>
-                                            <outlet property="fechaAlbum" destination="Kzi-e5-KeY" id="lZm-9M-dkC"/>
-                                            <outlet property="nombreAlbum" destination="npq-gP-iGX" id="0uC-Gs-vag"/>
+                                            <outlet property="albumDate" destination="npq-gP-iGX" id="w2s-1N-9Hu"/>
+                                            <outlet property="albumName" destination="Kzi-e5-KeY" id="nmL-E7-DLX"/>
+                                            <outlet property="imageAlbum" destination="X42-3k-eIt" id="SHK-83-6nt"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -180,7 +180,7 @@
                                 <rect key="frame" x="124" y="168.5" width="166" height="30"/>
                                 <state key="normal" title="Página del artista"/>
                                 <connections>
-                                    <action selector="visitarPagina:" destination="fIh-7Q-f9d" eventType="touchUpInside" id="mL2-ky-RBh"/>
+                                    <action selector="visitPage:" destination="fIh-7Q-f9d" eventType="touchUpInside" id="bJD-Ke-He3"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EL1-vm-fnY">
@@ -189,6 +189,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="4cL-FP-xnX">
+                                <rect key="frame" x="197" y="82" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -220,6 +224,7 @@
                         <outlet property="priceAlbum" destination="THl-NN-SFt" id="Ghm-DG-eqs"/>
                         <outlet property="tableSongs" destination="QrT-N4-lE0" id="EsR-zH-SFg"/>
                         <outlet property="titleAlbum" destination="rwZ-wV-2Oc" id="ShG-cS-G4U"/>
+                        <outlet property="vSpinner" destination="4cL-FP-xnX" id="PL5-4x-OkC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ihT-Gz-PpQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
