--- a/itunes1/Base.lproj/Main.storyboard
+++ b/itunes1/Base.lproj/Main.storyboard
@@ -97,19 +97,18 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="mS9-AY-b9m">
-                                                    <rect key="frame" x="76" y="93" width="21" height="20"/>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="mS9-AY-b9m">
+                                                    <rect key="frame" x="76" y="93" width="20" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="npq-gP-iGX" firstAttribute="leading" secondItem="XnL-g8-oQO" secondAttribute="leading" id="Dzo-Q1-ycE"/>
                                                 <constraint firstAttribute="trailing" secondItem="X42-3k-eIt" secondAttribute="trailing" id="ESv-9p-odB"/>
                                                 <constraint firstItem="npq-gP-iGX" firstAttribute="top" secondItem="Kzi-e5-KeY" secondAttribute="bottom" constant="1" id="GTx-gW-vtV"/>
-                                                <constraint firstItem="mS9-AY-b9m" firstAttribute="leading" secondItem="X42-3k-eIt" secondAttribute="trailing" constant="-97" id="SYY-z5-Fdb"/>
                                                 <constraint firstItem="Kzi-e5-KeY" firstAttribute="leading" secondItem="XnL-g8-oQO" secondAttribute="leading" id="Wyo-dh-POb"/>
                                                 <constraint firstItem="X42-3k-eIt" firstAttribute="leading" secondItem="XnL-g8-oQO" secondAttribute="leading" id="XXR-IN-yss"/>
                                                 <constraint firstItem="Kzi-e5-KeY" firstAttribute="top" secondItem="X42-3k-eIt" secondAttribute="bottom" constant="1" id="aUv-M9-Ibw"/>
-                                                <constraint firstItem="X42-3k-eIt" firstAttribute="top" secondItem="mS9-AY-b9m" secondAttribute="bottom" constant="-113" id="c69-1y-aOv"/>
                                                 <constraint firstAttribute="bottom" secondItem="npq-gP-iGX" secondAttribute="bottom" id="j8D-pB-s5T"/>
                                                 <constraint firstAttribute="trailing" secondItem="npq-gP-iGX" secondAttribute="trailing" id="p0x-oW-kp8"/>
                                                 <constraint firstItem="npq-gP-iGX" firstAttribute="top" secondItem="Kzi-e5-KeY" secondAttribute="bottom" constant="1" id="pEn-E0-Z5E"/>
@@ -129,9 +128,8 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbE-cI-JYo">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sbE-cI-JYo">
                                 <rect key="frame" x="108" y="20" width="198" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -139,6 +137,11 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <accessibility key="accessibilityConfiguration" identifier="DiscografiaController"/>
+                        <constraints>
+                            <constraint firstItem="sbE-cI-JYo" firstAttribute="top" secondItem="TK7-lW-vhI" secondAttribute="top" constant="20" id="6V7-tg-uXa"/>
+                            <constraint firstItem="sbE-cI-JYo" firstAttribute="leading" secondItem="TK7-lW-vhI" secondAttribute="leading" constant="108" id="Je9-Gz-x9d"/>
+                            <constraint firstItem="TK7-lW-vhI" firstAttribute="trailing" secondItem="sbE-cI-JYo" secondAttribute="trailing" constant="108" id="jKX-mp-vyA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TK7-lW-vhI"/>
                     </view>
                     <navigationItem key="navigationItem" id="FkI-ex-T3Y"/>
@@ -235,7 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ihT-Gz-PpQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2471.0144927536235" y="1.3392857142857142"/>
+            <point key="canvasLocation" x="2304" y="3"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GmF-05-r6V">
